<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_main_top"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_main_search"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/meal_search"
        app:hintTextAppearance="@style/TextAppearance.Material3.BodySmall"
        app:layout_constraintTop_toBottomOf="@id/appbar_main">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_main_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiper_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_main_search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_main_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/main_filter"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:chipBackgroundColor="@color/white"
                app:chipIconTint="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/sv_main_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="@id/chip_main_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/chip_main_filter"
                app:layout_constraintTop_toTopOf="@id/chip_main_filter">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipgroup_main_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="8dp" />
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingHorizontal="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_main_filter"
                tools:listitem="@layout/item_meal" />

            <include
                android:id="@+id/include_main_error"
                layout="@layout/layout_error"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_main_filter" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_main_search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_main_filter_shimmer"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-8dp"
                android:layout_marginTop="16dp"
                app:chipBackgroundColor="@color/colorShimmer"
                app:chipStrokeColor="@color/colorShimmer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/include_main_shimmer_one"
                layout="@layout/item_meal_shimmer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/include_main_shimmer_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_main_filter_shimmer" />


            <include
                android:id="@+id/include_main_shimmer_two"
                layout="@layout/item_meal_shimmer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/include_main_shimmer_one"
                app:layout_constraintTop_toTopOf="@id/include_main_shimmer_one" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>